Added auth and otp support
