# app/schemas/user_schema.py
@@ -1,13 +1,12 @@
-from typing import Optional
-from uuid import UUID
+from typing import Any, Optional
 from pydantic import BaseModel, EmailStr
-from typing import Any
+
 
 class User(BaseModel):
-    user_id: UUID
+    user_id: str
     username: str
     email: EmailStr
     phone: str
     additional_info: Optional[Any] = None
-    sessions: Optional[dict[str, list[UUID]]] = None
-    disabled: Optional[bool] = False
+    sessions: Optional[list[str]] = None
+    token: Optional[str] = None
